--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
+    "gh-pages": "^6.1.1",
     "jest": "^27.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -15,7 +16,10 @@
     "reactflow": "^11.11.4",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://tatyanavoloshko.github.io/star-wars-app",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
